crates/wdl-analysis/tests/validation/empty/source.errors
error: there must be at least one task, workflow, struct, or enum definition in the file
  ┌─ tests/validation/empty/source.wdl:4:1
  │
4 │ 
  │  

