crates/wdl-analysis/tests/validation/empty/source.wdl
# This is a validation test of an empty file

version 1.1
